--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,8 +1,10 @@
-<div>
-  <nav>
-    Nav
-  </nav>
-  <section>
+<section class="dashboard">
+  <section class="sidebar">
+    <div class="logo">
+    </div>
+    <app-side-menu [menus]="menus"></app-side-menu>
+  </section>
+  <section class="outlet">
     <router-outlet></router-outlet>
   </section>
-</div>
+</section>
