--- a/src/app/shared/pages/landing/landing.component.html
+++ b/src/app/shared/pages/landing/landing.component.html
@@ -1,1 +1,8 @@
-<p>landing works!</p>
+<section class="landing">
+  <p>
+    <button routerLink="/dashboard" pButton type="button" label="进入控制台"></button>
+  </p>
+  <p>
+    <button routerLink="/login" pButton type="button" label="登录系统"></button>
+  </p>
+</section>
