--- a/src/app/shared/pages/login/login.component.html
+++ b/src/app/shared/pages/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<form [formGroup]="formGroup" class="card" (ngSubmit)="handleSubmit()">
+  <div class="p-field p-grid">
+    <div class="p-col">
+      <label>
+        <input formControlName="username" type="text" pInputText>
+      </label>
+    </div>
+  </div>
+  <div class="p-field p-grid">
+    <div class="p-col">
+      <label>
+        <input formControlName="password" type="password" pInputText>
+      </label>
+    </div>
+
+    <button pButton type="submit" label="登录"></button>
+  </div>
+
+</form>
