--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,9 @@ html, body {
   width: 100%;
   overflow: hidden;
 }
+[data-flex="dir:left"]>[data-flex-box] {
+  width: 0;
+}
+[data-flex="dir:top"]>[data-flex-box] {
+  height: 0;
+}
