--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,22 +1,25 @@
 .dashboard {
   height: 100vh;
   width: 100vw;
-  background-color: #f5f5f5;
-  display: flex;
+  background-color: var(--color-white1);
 }
 .sidebar {
+  position: relative;
   height: 100%;
-  width: 220px;
-  background-color: #343a40;
-  background-image: linear-gradient(180deg, #343a40 10%, #2e3439 100%);
+  width: var(--sidebar-width);
+  background-color: var(--color-dark-grey);
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
+
   .logo {
     height: 60px;
-    background-color: orange;
+    border-bottom: 1px solid var(--color-white2);
   }
+
+}
+.header {
+  height: 60px;
+  background-color: var(--color-white);
+  border-bottom: 1px solid var(--border-color);
 }
 .outlet {
-  flex: 1;
-  width: 0;
-  height: 100%;
 }
