--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,13 +2,22 @@
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
+  //height: 100%;
+  //width: 100%;
+  //overflow: hidden;
 }
+@import "~flex.css/dist/data-flex.css";
 [data-flex="dir:left"]>[data-flex-box] {
   width: 0;
 }
 [data-flex="dir:top"]>[data-flex-box] {
   height: 0;
+}
+:root {
+  --color-white: #ffffff;
+  --color-white1: #f5f5f5;
+  --color-white2: rgba(255, 255, 255, .2);
+  --color-dark-grey: #343a40;
+  --border-color: #dee2e6;
+  --sidebar-width: 240px;
 }
