--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -4,9 +4,15 @@
     </div>
   </section>
   <section data-flex-box="1" data-flex="dir:top" class="content">
-    <header class="header"></header>
+    <header class="header" data-flex="dir:left cross:center">
+      <div data-flex-box="1"></div>
+      <p-avatar (click)="op.toggle($event)" label="P" shape="circle"></p-avatar>
+    </header>
     <main data-flex-box="1" class="outlet">
       <router-outlet></router-outlet>
     </main>
   </section>
 </section>
+<p-overlayPanel class="overlay-panel" #op>
+  <p-menu [model]="profileMenus"></p-menu>
+</p-overlayPanel>
