--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,11 +13,13 @@ html, body {
 [data-flex="dir:top"]>[data-flex-box] {
   height: 0;
 }
+.pointer {
+  cursor: pointer;
+}
 :root {
   --color-white: #ffffff;
   --color-white1: #f5f5f5;
   --color-white2: rgba(255, 255, 255, .2);
   --color-dark-grey: #343a40;
   --border-color: #dee2e6;
-  --sidebar-width: 240px;
 }
