--- a/src/app/shared/pages/login/login.component.html
+++ b/src/app/shared/pages/login/login.component.html
@@ -7,7 +7,7 @@
       <form [formGroup]="formGroup" class="form-wrap" (ngSubmit)="handleSubmit()">
         <div class="p-input-icon-left">
           <i class="pi pi-user"></i>
-          <input class="form-control" placeholder="请输入用户名" formControlName="username" type="text" pInputText>
+          <input autofocus class="form-control" placeholder="请输入用户名" formControlName="username" type="text" pInputText>
         </div>
         <div class="p-input-icon-left">
           <i class="pi pi-key"></i>
