make sidebar to responsive

--- a/src/app/modules/sidebar/sidebar.component.html
+++ b/src/app/modules/sidebar/sidebar.component.html
@@ -1,4 +1,5 @@
-<section class="sidebar" [style.width]="sidebarWidth">
+<div class="mask" (click)="handleMaskClick()" [class.is-not-collapsed]="!sidebarService.isCollapsed"></div>
+<section class="sidebar" [class.is-collapsed]="sidebarService.isCollapsed">
   <div class="logo">
   </div>
 </section>
