make sidebar to responsive

--- a/src/app/pages/dashboard/authority/role/role.component.html
+++ b/src/app/pages/dashboard/authority/role/role.component.html
@@ -1,1 +1,195 @@
 <p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!</p>
+<p>role works!2</p>
