--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -3,6 +3,6 @@
   <div data-flex-box="1"></div>
   <p-avatar class="pointer" (click)="op.toggle($event)" label="P" shape="circle"></p-avatar>
 </header>
-<p-overlayPanel class="overlay-panel" #op>
-  <p-menu [model]="profileMenus"></p-menu>
+<p-overlayPanel appendTo="body" styleClass="overlay-panel" #op>
+  <p-menu class="overlay-panel-menu" [model]="profileMenus"></p-menu>
 </p-overlayPanel>
