--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -2,15 +2,22 @@
   height: 100vh;
   width: 100vw;
   background-color: var(--color-white1);
+  overflow: hidden;
 }
 .content {
+  position: relative;
   height: 100%;
   margin-left: 240px;
   transition: margin-left .3s;
+  overflow: hidden;
   @media screen and (max-width: 991px) {
     margin-left: 0;
   }
   &.is-side-collapsed {
     margin-left: 0;
   }
+}
+.outlet {
+  overflow-y: auto;
+
 }
