--- a/src/app/modules/menu/menu.component.html
+++ b/src/app/modules/menu/menu.component.html
@@ -1,14 +1,21 @@
-<ng-container *ngTemplateOutlet="menuTpl; context: {menus: menus}"></ng-container>
-<ng-template #menuTpl let-menus="menus">
+<ng-container *ngTemplateOutlet="menuTpl; context: {menus: menus, level: 0}"></ng-container>
+<ng-template #menuTpl let-menus="menus" let-level="level">
   <ul class="menu">
     <ng-container *ngFor="let menu of menus">
-      <li class="menu-item" *ngIf="!menu.items">
-        <div class="menu-item-title" data-flex="dir:left cross:center" routerLinkActive="active" [routerLink]="menu.path"><i class="pi pi-user"></i><span class="menu-item-title">{{menu.name}}</span></div>
+      <li class="menu-item" routerLinkActive="active" [routerLink]="menu.path" *ngIf="!menu.items">
+        <div class="menu-item-title-wrap" [style.paddingLeft]="getPaddingLeft(level)" data-flex="dir:left cross:center">
+          <i class="pi pi-user" *ngIf="level === 0"></i>
+          <span data-flex-box="1" class="menu-item-title">{{menu.name}}</span>
+        </div>
       </li>
       <li class="menu-sub" *ngIf="menu.items">
-        <div class="menu-item-title" (click)="menu.open = !menu.open" data-flex="dir:left main:justify cross:center"><span class="menu-item-title">{{menu.name}}</span><i class="pi pi-user"></i></div>
+        <div class="menu-item-title-wrap" [style.paddingLeft]="getPaddingLeft(level)" (click)="menu.open = !menu.open" data-flex="dir:left cross:center">
+          <i class="pi pi-user"></i>
+          <span data-flex-box="1" class="menu-item-title">{{menu.name}}</span>
+          <i class="pi" [class.pi-angle-up]="menu.open" [class.pi-angle-down]="!menu.open"></i>
+        </div>
         <div class="menu-sub-content" [class.open]="getIsMatch(menu)">
-          <ng-container *ngTemplateOutlet="menuTpl; context: {menus: menu.items}"></ng-container>
+          <ng-container *ngTemplateOutlet="menuTpl; context: {menus: menu.items, level: level + 1}"></ng-container>
         </div>
       </li>
     </ng-container>
