--- a/src/app/modules/menu/menu.component.scss
+++ b/src/app/modules/menu/menu.component.scss
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  color: var(--color-white);
 }
 
 .menu-item, .menu-sub {
@@ -11,25 +10,28 @@
   line-height: 40px;
   cursor: pointer;
   background-color: transparent;
-  transition: background-color .3s;
+  transition: color .3s, background-color .3s;
+  outline: none;
+  color: var(--color-white7);
 
-  >.menu-item-title {
-    outline: none;
-    padding: 0 10px;
-    &.active, &:hover {
-      background-color: rgba(0, 0, 0, .2);
-    }
+  &.active, &:hover {
+    background-color: rgba(0, 0, 0, .2);
+    color: var(--color-white);
+
   }
+}
+.menu-item-title-wrap {
+  padding-right: 24px;
+}
+.menu-item-title {
+  text-indent: 10px;
 }
 .menu-sub-content {
   transition: height .3s;
   height: auto;
 }
+
 .menu-sub-content:not(.open) {
   height: 0;
   overflow: hidden;
-}
-
-.menu-item-title {
-  text-indent: 10px;
 }
