--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,7 @@ html, body {
   --color-white: #ffffff;
   --color-white1: #f5f5f5;
   --color-white2: rgba(255, 255, 255, .2);
+  --color-white7: rgba(255, 255, 255, .7);
   --color-dark-grey: #343a40;
   --border-color: #dee2e6;
 }
