--- a/src/app/modules/header/header.component.scss
+++ b/src/app/modules/header/header.component.scss
@@ -1,5 +1,5 @@
 .header {
-  padding: 0 24px;
+  padding: 0 1rem;
   box-sizing: border-box;
   height: 4rem;
   background-color: var(--color-white);
