--- a/src/app/shared/pages/login/login.component.scss
+++ b/src/app/shared/pages/login/login.component.scss
@@ -4,20 +4,20 @@
   background-image: linear-gradient(-135deg,#c850c0,#4158d0);
 }
 .login-wrap {
-  height: 600px;
-  width: 800px;
+  height: 30rem;
+  width: 50rem;
   background-color: #fff;
-  padding: 24px;
-  border-radius: 10px;
+  padding: 2rem;
+  border-radius: 1rem;
 }
 .form-wrap {
   width: 100%;
-  padding: 0 24px;
+  padding: 0 2rem;
   box-sizing: border-box;
   button, .p-input-icon-left, .form-control {
     width: 100%;
   }
   .p-input-icon-left{
-    margin-bottom: 20px;
+    margin-bottom: 1.5rem;
   }
 }
