--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -21,12 +21,13 @@
   }
 }
 .config-button {
-  height: 4rem;
-  width: 4rem;
+  height: 3rem;
+  width: 3rem;
   background-color: var(--primary-color);
   position: fixed;
   top: 50%;
   right: 0;
+  z-index: 999;
   cursor: pointer;
   border-top-left-radius: 0.3rem;
   border-bottom-left-radius: 0.3rem;
@@ -34,6 +35,6 @@
   box-shadow: 0 5px 5px -3px rgb(0 0 0 / 20%), 0 8px 10px 1px rgb(0 0 0 / 14%), 0 3px 14px 2px rgb(0 0 0 / 12%);
   >.pi {
     color: var(--color-white);
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
 }
